Maybe fixed crashing....

--- a/app/src/main/res/layout/fragment_tele.xml
+++ b/app/src/main/res/layout/fragment_tele.xml
@@ -92,7 +92,7 @@
         android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:text="(+)"
-        android:id="@+id/btnDef1"
+        android:id="@+id/btnDefense1"
         android:textSize="50dp"
         android:layout_below="@+id/btnDecHigh"
         android:layout_centerHorizontal="true"
@@ -106,7 +106,7 @@
         android:text="(-)"
         android:id="@+id/btnDecLow"
         android:textSize="50dp"
-        android:layout_below="@+id/btnDef1"
+        android:layout_below="@+id/btnDefense1"
         android:layout_centerHorizontal="true"
         android:onClick="decLowScrore"
         android:background="@android:color/background_light"
@@ -151,7 +151,7 @@
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:text="(+)"
-                android:id="@+id/btnDef1"
+                android:id="@+id/btnDefense1"
                 android:textSize="50dp"
                 android:layout_below="@+id/btnDecHigh"
                 android:layout_centerHorizontal="true"
@@ -165,7 +165,7 @@
                 android:text="(-)"
                 android:id="@+id/btnDef1Sub"
                 android:textSize="50dp"
-                android:layout_below="@+id/btnDef1"
+                android:layout_below="@+id/btnDefense1"
                 android:layout_centerHorizontal="true"
                 android:onClick="Def1Sub"
                 android:background="@android:color/background_light"
@@ -209,7 +209,7 @@
                 android:text="(-)"
                 android:id="@+id/btnDef2Sub"
                 android:textSize="50dp"
-                android:layout_below="@+id/btnDef1"
+                android:layout_below="@+id/btnDefense1"
                 android:layout_centerHorizontal="true"
                 android:onClick="Def2Sub"
                 android:background="@android:color/background_light"
@@ -246,7 +246,9 @@
                 android:layout_centerHorizontal="true"
                 android:onClick="Def3"
                 android:background="@android:color/background_light"
-                android:layout_marginBottom="20dp" />
+                android:layout_marginBottom="20dp"
+                android:longClickable="false"
+                android:nestedScrollingEnabled="false" />
 
             <Button
                 android:layout_width="230dp"
@@ -254,7 +256,7 @@
                 android:text="(-)"
                 android:id="@+id/btnDef3Sub"
                 android:textSize="50dp"
-                android:layout_below="@+id/btnDef1"
+                android:layout_below="@+id/btnDefense1"
                 android:layout_centerHorizontal="true"
                 android:onClick="Def3Sub"
                 android:background="@android:color/background_light"
@@ -298,7 +300,7 @@
                 android:text="(-)"
                 android:id="@+id/btnDef4Sub"
                 android:textSize="50dp"
-                android:layout_below="@+id/btnDef1"
+                android:layout_below="@+id/btnDefense1"
                 android:layout_centerHorizontal="true"
                 android:onClick="Def4Sub"
                 android:background="@android:color/background_light"
@@ -342,7 +344,7 @@
                 android:text="(-)"
                 android:id="@+id/btnDef5Sub"
                 android:textSize="50dp"
-                android:layout_below="@+id/btnDef1"
+                android:layout_below="@+id/btnDefense1"
                 android:layout_centerHorizontal="true"
                 android:onClick="Def5Sub"
                 android:background="@android:color/background_light"
